--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/staskjs/vue-slick.git"
   },
+  "browserify": {
+    "transform": ["vueify"]
+  },
   "keywords": [
     "slick",
     "carousel",
