--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-slick",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Vue component for Slick-carousel (http://kenwheeler.github.io/slick)",
   "main": "slickCarousel.vue",
   "scripts": {
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/staskjs/vue-slick#readme",
   "peerDependencies": {
-    "jquery": "~1.7.1"
+    "jquery": "*"
   },
   "dependencies": {
     "slick-carousel": "^1.6.0"
