--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.12",
   "description": "Vue component for Slick-carousel (http://kenwheeler.github.io/slick)",
   "main": "slickCarousel.vue",
+  "types": "index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
