--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "source": "src/slickCarousel.vue",
   "types": "src/index",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,7 @@
   },
   "devDependencies": {
     "jquery": "*",
-    "rollup": "^0.66.6",
+    "rollup": "^0.67.0",
     "rollup-plugin-buble": "^0.19.4",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
