--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-slick",
-  "version": "1.1.20",
+  "version": "1.1.21",
   "description": "Vue component for Slick-carousel (http://kenwheeler.github.io/slick)",
   "main": "dist/slickCarousel.cjs.js",
   "module": "dist/slickCarousel.esm.js",
@@ -29,7 +29,9 @@
   },
   "homepage": "https://github.com/staskjs/vue-slick#readme",
   "peerDependencies": {
-    "jquery": "*",
+    "jquery": "*"
+  },
+  "dependencies": {
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
